@@ -1,5 +1,7 @@
 21 January 2009
 
+* Handle SIGTERM (and kill-server which uses it), a bit more neatly - tidy
+  up properly and print a nicer message. Same effect though :-).
 * new-window now supports -k to kill target window if it exists.
 * Bring back split-window -p and -l options to specify the height a percentage
   or as a number of lines.
@@ -995,7 +997,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.229 2009-01-21 22:21:49 nicm Exp $
+$Id: CHANGES,v 1.230 2009-01-21 22:47:31 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
